--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "pay-now",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
+    "bootstrap": "^5.0.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
